# t-loop

./: .gitignore  .tloop-state.json  CLAUDE.md  LICENSE  README.md  git_ops.py  pyproject.toml  t-loop.py  tasks.example.yaml  tasks.yaml  test_t_loop.py
docs/plan/: plan01-git.md  plan02-data-home.md  plan03-cli-project.md  plan04-restructure-pypi-subcommands.md
src/: claude_runner.py  cli.py  cmd_archive.py  cmd_commit.py  cmd_edit.py  cmd_log.py  cmd_migrate.py  cmd_run.py  config.py  git_ops.py  main.py  review.py  state.py  task.py
src/runner/: __init__.py  claude.py  cybervisor.py
test/: test_claude_runner.py  test_cli.py  test_cmd_log.py  test_git_ops.py  test_review.py  test_t_loop.py
tloop/: claude_runner.py  cli.py  git_ops.py
