[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tloop-cli"
version = "1.0.0"
description = "Automated Claude Code task runner"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
tloop = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main", "config", "state", "task", "cmd_run", "cmd_edit", "cmd_migrate", "cmd_archive", "git_ops", "claude_runner"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["runner*"]

[tool.pytest.ini_options]
testpaths = ["test"]
